度数分布表

--- a/ FrequencyDistributionTable.ipynb
+++ b/ FrequencyDistributionTable.ipynb
@@ -1,9 +1,61 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# 度数分布表とヒストグラム\n",
+    "\n",
+    "数値の範囲ごとに区切る時の区切り＝**階級**\n",
+    "\n",
+    "階級の範囲の真ん中の値＝**階級値**\n",
+    "\n",
+    "各階級にある数値の数＝**度数**\n",
+    "\n",
+    "全体を１とした時の割合＝**相対度数**\n",
+    "\n",
+    "$$\n",
+    "相対度数＝各階級に属するデータの個数÷すべてのデータの個数\n",
+    "$$\n",
+    "\n",
+    "これらをまとめると，**度数分布表**となる．\n",
+    "\n",
+    "度数分布表は**ヒストグラム**で表す．\n",
+    "\n",
+    "横軸：変数\n",
+    "\n",
+    "縦軸：度数or相対度数\n",
+    "\n",
+    "棒の幅：階級の幅\n",
+    "\n",
+    "棒の中央：階級値\n",
+    "\n",
+    "**データ全体の雰囲気を直感的に掴むためにある**\n",
+    "\n",
+    "階級の幅を数学的に求める方法は？？\n",
+    "\n",
+    "1. 階級の個数をスタージェスの公式により求める\n",
+    "    \n",
+    "    $$\n",
+    "    1+\\dfrac{log_{10}データの個数}{log_{10}2}\n",
+    "    $$\n",
+    "    \n",
+    "2. 階級の幅を次の式で求める\n",
+    "\n",
+    "$$\n",
+    "\\dfrac{（データの最大値）-（データの最小値）}{スタージェスの公式から求めた階級の個数}\n",
+    "$$\n",
+    "\n",
+    "あるけど，逆にわかりづらくなることもある\n",
+    "\n",
+    "直感的に雰囲気を掴むことが重要だから，，，"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +106,70 @@
     "print(f\"採用する階級の個数(bins): {num_bins}\")\n",
     "print(f\"データの範囲: {data_min} 〜 {data_max} (範囲: {data_max - data_min})\")\n",
     "print(f\"計算された階級の幅: {class_width:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 階級の設定\n",
+    "bins = [0, 10, 20, 30, 40, 50, 60]\n",
+    "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# データの区分け\n",
+    "df['階級'] = pd.cut(df[target_column], bins=bins, right=False, labels=labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 階級ごとにデータ数をカウント＝度数\n",
+    "freq_table = df['階級'].value_counts(sort=False).to_frame(name='度数')\n",
+    "print(freq_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 相対度数の計算\n",
+    "freq_table['相対度数'] = freq_table['度数'] / freq_table['度数'].sum()\n",
+    "\n",
+    "# 累積度数の計算\n",
+    "freq_table['累積度数'] = freq_table['度数'].cumsum()\n",
+    "\n",
+    "# 累積相対度数の計算\n",
+    "freq_table['累積相対度数'] = freq_table['相対度数'].cumsum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 度数分布表の表示\n",
+    "freq_table = freq_table.fillna(0) # NaNを0に置換\n",
+    "display(freq_table)"
    ]
   }
  ],
