度数分布表とヒストグラム

--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -62,6 +62,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import japanize_matplotlib\n",
     "from matplotlib import pyplot as plt"
    ]
   },
@@ -170,6 +172,24 @@
     "# 度数分布表の表示\n",
     "freq_table = freq_table.fillna(0) # NaNを0に置換\n",
     "display(freq_table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ヒストグラムの作成\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "\n",
+    "plt.hist(df[target_column], bins=bins, edgecolor='black', alpha=0.7)\n",
+    "plt.title('ヒストグラム')\n",
+    "plt.xlabel('点数')\n",
+    "plt.ylabel('度数')\n",
+    "plt.grid(axis='y', alpha=0.5)\n",
+    "plt.show()"
    ]
   }
  ],
