--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# 階級の設定\n",
-    "bins = [0, 10, 20, 30, 40, 50, 60]\n",
+    "bins = [0, 1.5, 3.0, 4.5, 6.0, 7.5, 9.0, 10.5, 12.0, 13.5, 15.0]\n",
     "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
    ]
   },
