--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# Excelファイルのインポート\n",
     "file_path = 'AdvanceData.xlsx' # Excelファイルのパスを指定\n",
-    "target_column = 'UWES_sum' # 対象の列名を指定\n",
+    "target_column = 'H' # 対象の列名を指定\n",
     "\n",
     "# Excelファイルを読み込む\n",
     "df = pd.read_excel(file_path)"
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# 階級の設定\n",
-    "bins = [0, 1.5, 3.0, 4.5, 6.0, 7.5, 9.0, 10.5, 12.0, 13.5, 15.0]\n",
+    "bins = [0, 2, 4, 6, 8, 10]\n",
     "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
    ]
   },
