正規分布しているか調べる

--- a/ CorrelationMatrix.ipynb
+++ b/ CorrelationMatrix.ipynb
@@ -43,8 +43,11 @@
     "\n",
     "# 分析したい「数値のカラム名」をリストアップする\n",
     "target_columns = [\n",
+    "    'age',\n",
+    "    'gender',\n",
+    "    'years',\n",
     "    'UWES_ave', \n",
-    "    'BAT', \n",
+    "    'BAT_ave',\n",
     "    'PERMA', \n",
     "    '外向性', \n",
     "    '神経質傾向',\n",
@@ -81,6 +84,36 @@
     "plt.figure(figsize=(10, 8))\n",
     "sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', vmin=-1, vmax=1, center=0, fmt='.2f')\n",
     "plt.title('心理尺度データの相関行列', fontsize=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_neuro = '神経質傾向'  # X軸\n",
+    "col_perma = 'PERMA'  # Y軸1\n",
+    "col_bat   = 'BAT_ave'    # Y軸2\n",
+    "# ---------------------------------------------------------\n",
+    "\n",
+    "plt.figure(figsize=(14, 6))\n",
+    "\n",
+    "# --- 左側: 神経症傾向 vs PERMA (負の相関の確認) ---\n",
+    "plt.subplot(1, 2, 1)\n",
+    "sns.regplot(x=col_neuro, y=col_perma, data=df, color='blue', line_kws={'color':'red'})\n",
+    "plt.title(f'{col_neuro} と PERMA の関係')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# --- 右側: 神経症傾向 vs BAT (正の相関の確認) ---\n",
+    "plt.subplot(1, 2, 2)\n",
+    "sns.regplot(x=col_neuro, y=col_bat, data=df, color='orange', line_kws={'color':'red'})\n",
+    "plt.title(f'{col_neuro} と BAT(バーンアウト) の関係')\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
