--- a/ NormalDistribution.ipynb
+++ b/ NormalDistribution.ipynb
@@ -32,11 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
-    "import japanize_matplotlib \n",
-    "from scipy.stats import norm\n"
+    "from scipy.stats import norm\n",
+    "import japanize_matplotlib"
    ]
   },
   {
@@ -46,14 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. データの準備\n",
-    "np.random.seed(0)\n",
+    "file_path = 'AdvanceData.xlsx'  # Excelファイル名\n",
+    "target_column = 'UWES_ave'         # 列名\n",
     "\n",
-    "# パターンA: 正規分布に従うデータ\n",
-    "data_normal = np.random.normal(loc=50, scale=10, size=100)\n",
+    "df = pd.read_excel(file_path)\n",
     "\n",
-    "# パターンB: 正規分布ではないデータ\n",
-    "data_uniform = np.random.uniform(low=0, high=100, size=100)"
+    "data = df[target_column].dropna()\n",
+    "print(f\"データ読み込み完了: {len(data)} 件\")\n",
+    "print(f\"基本統計量:\\n{data.describe()}\")"
    ]
   },
   {
@@ -63,27 +64,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. グラフの描画\n",
-    "plt.figure(figsize=(12, 5))\n",
+    "plt.figure(figsize=(8, 6))\n",
     "\n",
-    "# 左側: 正規分布データ\n",
-    "plt.subplot(1, 2, 1)\n",
-    "# stats.probplot(データ, dist=\"norm\", plot=plt) で描画できます\n",
-    "stats.probplot(data_normal, dist=\"norm\", plot=plt)\n",
-    "plt.title(\"パターンA: 正規分布のデータ\")\n",
-    "plt.xlabel(\"理論上の分位数\")\n",
+    "stats.probplot(data, dist=\"norm\", plot=plt)\n",
+    "\n",
+    "plt.title(f\"Q-Qプロット: {target_column}\")\n",
+    "plt.xlabel(\"理論上の分位数 (正規分布)\")\n",
     "plt.ylabel(\"実際のデータ値\")\n",
     "plt.grid(True)\n",
-    "\n",
-    "# 右側: 正規分布ではない\n",
-    "plt.subplot(1, 2, 2)\n",
-    "stats.probplot(data_uniform, dist=\"norm\", plot=plt)\n",
-    "plt.title(\"パターンB: 正規分布ではないデータ\")\n",
-    "plt.xlabel(\"理論上の分位数\")\n",
-    "plt.ylabel(\"実際のデータ値\")\n",
-    "plt.grid(True)\n",
-    "\n",
-    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -94,32 +82,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. データの準備\n",
-    "np.random.seed(42)\n",
-    "data = np.random.normal(loc=50, scale=10, size=1000)  # 平均50, 標準偏差10のデータ\n",
-    "\n",
-    "# 2. データからパラメータ（平均と標準偏差）を推定する\n",
+    "# 1. データからパラメータ（平均と標準偏差）を推定する\n",
     "mu, std = norm.fit(data)\n",
     "\n",
-    "# 3. グラフの設定\n",
+    "# 2. グラフの設定\n",
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# ヒストグラム\n",
-    "plt.hist(data, bins=30, density=True, alpha=0.6, color='skyblue', label='実際のデータ(ヒストグラム)')\n",
+    "plt.hist(data, bins=6, density=True, alpha=0.6, color='skyblue', label='実際のデータ')\n",
     "\n",
     "# 正規分布曲線（理論値)\n",
-    "# グラフの横軸の範囲を決める（データの最小値〜最大値）\n",
     "xmin, xmax = plt.xlim()\n",
     "x = np.linspace(xmin, xmax, 100)\n",
-    "\n",
-    "# そのxに対応する確率密度(y)を計算\n",
     "p = norm.pdf(x, mu, std)\n",
     "\n",
     "# 曲線をプロット\n",
-    "plt.plot(x, p, 'r', linewidth=2, label=f'正規分布曲線 (平均={mu:.2f}, SD={std:.2f})')\n",
+    "plt.plot(x, p, 'r', linewidth=2, label=f'正規分布曲線\\n(平均={mu:.2f}, SD={std:.2f})')\n",
     "\n",
-    "# 4. 装飾\n",
-    "plt.title('データの分布と正規分布曲線の重ね合わせ')\n",
+    "# 3. 装飾\n",
+    "plt.title(f'{target_column} の分布と正規分布曲線の比較')\n",
     "plt.xlabel('値')\n",
     "plt.ylabel('確率密度')\n",
     "plt.legend()\n",
