--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -74,12 +74,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Excelファイルのインポート\n",
-    "file_path = 'AdvanceData.xlsx' # Excelファイルのパスを指定\n",
-    "target_column = 'H' # 対象の列名を指定\n",
+    "# Excelファイルのパスを指定\n",
+    "file_path = 'AdvanceData.xlsx' \n",
+    "target_column = 'BAT_sum'\n",
     "\n",
-    "# Excelファイルを読み込む\n",
-    "df = pd.read_excel(file_path)"
+    "# 1. Excelファイルを開いてシートの一覧を取得・表示する\n",
+    "xls = pd.ExcelFile(file_path)\n",
+    "print(\"--- シート一覧 ---\")\n",
+    "for i, name in enumerate(xls.sheet_names):\n",
+    "    print(f\"{i}: {name}\")\n",
+    "\n",
+    "# 2. 読み込みたいシートを指定する\n",
+    "selected_sheet = 0  # ここを変更してシートを選択\n",
+    "\n",
+    "# 3. 指定したシートを読み込む\n",
+    "df = pd.read_excel(file_path, sheet_name=selected_sheet)\n",
+    "\n",
+    "print(f\"\\n選択されたシート '{xls.sheet_names[selected_sheet] if isinstance(selected_sheet, int) else selected_sheet}' を読み込みました。\")"
    ]
   },
   {
@@ -118,7 +129,7 @@
    "outputs": [],
    "source": [
     "# 階級の設定\n",
-    "bins = [0, 2, 4, 6, 8, 10]\n",
+    "bins = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170]  # 階級の境界値を指定\n",
     "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
    ]
   },
@@ -185,11 +196,30 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "plt.hist(df[target_column], bins=bins, edgecolor='black', alpha=0.7)\n",
-    "plt.title('ヒストグラム')\n",
+    "plt.title('UWES_sumのヒストグラム')\n",
     "plt.xlabel('点数')\n",
     "plt.ylabel('度数')\n",
     "plt.grid(axis='y', alpha=0.5)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 統計量の計算\n",
+    "mean_val = data.mean()      # 平均\n",
+    "median_val = data.median()  # 中央値\n",
+    "std_val = data.std()        # 標準偏差\n",
+    "\n",
+    "print(f\"--- 分析対象: {target_column} ---\")\n",
+    "print(f\"データ数 (N)   : {len(data)}\")\n",
+    "print(f\"平均：{mean_val:.2f}\")   # 小数第2位まで表示\n",
+    "print(f\"中央値：{median_val:.2f}\")\n",
+    "print(f\"標準偏差：{std_val:.2f}\")"
    ]
   }
  ],
