信頼性検証とスピアマン

--- a/ PreliminaryAnalysis.ipynb
+++ b/ PreliminaryAnalysis.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "file_path = 'AdvanceData.xlsx'  # Excelファイル名\n",
-    "target_column = 'PERMA'         # 列名\n",
+    "target_column = '調和性'         # 列名\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
@@ -66,7 +66,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "# ヒストグラム\n",
-    "plt.hist(data, bins=10, density=True, alpha=0.6, color='skyblue', label='実際のデータ')\n",
+    "plt.hist(data, bins='auto', density=True, alpha=0.6, color='skyblue', label='実際のデータ')\n",
     "\n",
     "# 正規分布曲線（理論値)\n",
     "xmin, xmax = plt.xlim()\n",
@@ -90,6 +90,26 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 歪度と尖度の計算\n",
+    "skewness = df.skew(numeric_only=True)\n",
+    "kurtosis = df.kurt(numeric_only=True)\n",
+    "\n",
+    "result = pd.DataFrame({\n",
+    "    '歪度 (Skewness)': skewness,\n",
+    "    '尖度 (Kurtosis)': kurtosis\n",
+    "})\n",
+    "\n",
+    "print(\"--- 分析結果 ---\")\n",
+    "display(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,6 +212,38 @@
     "# 各列の外れ値の合計数を表示\n",
     "outliers_count = outliers_mask.sum()\n",
     "print(outliers_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. 分布診断\n",
+    "skew_values = df[['UWES_ave', 'BAT_ave', 'PERMA']].skew()\n",
+    "print(\"Skew values:\\n\", skew_values)\n",
+    "\n",
+    "# 2. 非正規項目をWinsorize（scipy.stats を既に import 済みなので stats.mstats.winsorize を使用）\n",
+    "for col in skew_values[abs(skew_values) > 2].index:\n",
+    "    df[f'{col}_robust'] = stats.mstats.winsorize(df[col], limits=[0.05, 0.05])\n",
+    "\n",
+    "# 3. 相関行列（ピアソン）: 実在する列のみを選択\n",
+    "cols_for_corr = ['UWES_ave', 'BAT_ave', 'PERMA']\n",
+    "corr_matrix = df.filter(cols_for_corr).corr()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_non_normal = df[['UWES_ave', 'BAT_ave']] \n",
+    "spearman_corr = df_non_normal.corr(method='spearman')\n",
+    "print(\"Spearman:\\n\", spearman_corr)"
    ]
   }
  ],
