--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# Excelファイルのパスを指定\n",
     "file_path = 'AdvanceData.xlsx' \n",
-    "target_column = 'BAT_sum'\n",
+    "target_column = '調和性'\n",
     "\n",
     "# 1. Excelファイルを開いてシートの一覧を取得・表示する\n",
     "xls = pd.ExcelFile(file_path)\n",
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "# 階級の設定\n",
-    "bins = [0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170]  # 階級の境界値を指定\n",
+    "bins = [3,4,5,6,7,8,9,10,11,12,13,14,15]  # 階級の境界値を指定\n",
     "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
    ]
   },
@@ -196,7 +196,7 @@
     "plt.figure(figsize=(10, 6))\n",
     "\n",
     "plt.hist(df[target_column], bins=bins, edgecolor='black', alpha=0.7)\n",
-    "plt.title('UWES_sumのヒストグラム')\n",
+    "plt.title(f'{target_column}のヒストグラム')\n",
     "plt.xlabel('点数')\n",
     "plt.ylabel('度数')\n",
     "plt.grid(axis='y', alpha=0.5)\n",
