データの相関と群比較

--- a/ CorrelationMatrix.ipynb
+++ b/ CorrelationMatrix.ipynb
@@ -44,16 +44,24 @@
     "# 分析したい「数値のカラム名」をリストアップする\n",
     "target_columns = [\n",
     "    'age',\n",
-    "    'gender',\n",
+    "    #'gender',\n",
     "    'years',\n",
-    "    'UWES_ave', \n",
-    "    'BAT_ave',\n",
+    "    #'role',\n",
+    "    'UWES_mean', \n",
+    "    'BAT_mean',\n",
     "    'PERMA', \n",
     "    '外向性', \n",
     "    '神経質傾向',\n",
     "    '誠実性',\n",
     "    '調和性', \n",
     "    '開放性',\n",
+    "    '記録数',\n",
+    "    '発話率',\n",
+    "    'パーソナル',\n",
+    "    'BADL',\n",
+    "    'IADL',\n",
+    "    'comm',\n",
+    "    'env'\n",
     "]\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
@@ -95,7 +103,7 @@
    "source": [
     "col_neuro = '神経質傾向'  # X軸\n",
     "col_perma = 'PERMA'  # Y軸1\n",
-    "col_bat   = 'BAT_ave'    # Y軸2\n",
+    "col_bat   = 'BAT_mean'    # Y軸2\n",
     "# ---------------------------------------------------------\n",
     "\n",
     "plt.figure(figsize=(14, 6))\n",
