--- a/ FrequencyDistributionTable_Histogram.ipynb
+++ b/ FrequencyDistributionTable_Histogram.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# Excelファイルのパスを指定\n",
     "file_path = 'AdvanceData.xlsx' \n",
-    "target_column = '調和性'\n",
+    "target_column = 'env'\n",
     "\n",
     "# 1. Excelファイルを開いてシートの一覧を取得・表示する\n",
     "xls = pd.ExcelFile(file_path)\n",
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "# 階級の設定\n",
-    "bins = [3,4,5,6,7,8,9,10,11,12,13,14,15]  # 階級の境界値を指定\n",
+    "bins = [0,10,20,30,40,50,60,70,80,90,100]  # 階級の境界値を指定\n",
     "labels = [f'{i}以上-{j}未満' for i, j in zip(bins[:-1], bins[1:])]"
    ]
   },
@@ -214,12 +214,9 @@
     "mean_val = data.mean()      # 平均\n",
     "median_val = data.median()  # 中央値\n",
     "std_val = data.std()        # 標準偏差\n",
-    "\n",
+    "data = df[target_column].dropna()\n",
     "print(f\"--- 分析対象: {target_column} ---\")\n",
-    "print(f\"データ数 (N)   : {len(data)}\")\n",
-    "print(f\"平均：{mean_val:.2f}\")   # 小数第2位まで表示\n",
-    "print(f\"中央値：{median_val:.2f}\")\n",
-    "print(f\"標準偏差：{std_val:.2f}\")"
+    "print(f\"median：  {median_val:.2f}\\n{data.describe()}\")\n"
    ]
   }
  ],
