--- a/ PreliminaryAnalysis.ipynb
+++ b/ PreliminaryAnalysis.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "file_path = 'AdvanceData.xlsx'  # Excelファイル名\n",
-    "target_column = '調和性'         # 列名\n",
+    "target_column = '記録数'         # 列名\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
