--- a/SpearmanCorrelationMatrix.ipynb
+++ b/SpearmanCorrelationMatrix.ipynb
@@ -26,17 +26,25 @@
     "\n",
     "# 分析したい「数値のカラム名」をリストアップする\n",
     "target_columns = [\n",
-    "    #'age',\n",
+    "    'age',\n",
     "    #'gender',\n",
-    "    #'years',\n",
-    "    'UWES_ave', \n",
-    "    'BAT_ave',\n",
+    "    'years',\n",
+    "    #'role',\n",
+    "    'UWES_mean', \n",
+    "    'BAT_mean',\n",
     "    'PERMA', \n",
     "    '外向性', \n",
     "    '神経質傾向',\n",
     "    '誠実性',\n",
     "    '調和性', \n",
     "    '開放性',\n",
+    "    '記録数',\n",
+    "    '発話率',\n",
+    "    'パーソナル',\n",
+    "    'BADL',\n",
+    "    'IADL',\n",
+    "    'comm',\n",
+    "    'env'\n",
     "]\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
@@ -63,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(10, 8))\n",
+    "plt.figure(figsize=(12, 10))\n",
     "mask = np.triu(np.ones_like(corr_matrix, dtype=bool))\n",
     "\n",
     "sns.heatmap(corr_matrix, \n",
