説明の追加

--- a/BasicStatisticsAndNormality.ipynb
+++ b/BasicStatisticsAndNormality.ipynb
@@ -1,9 +1,68 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# 基本統計量と正規性\n",
+    "\n",
+    "# 概要\n",
+    "\n",
+    "1. 入力データの基本統計量・歪度・尖度・QQプロット・ヒストグラム・シャピロ・ウィルク検定結果・欠損率・外れ値の数を調査するためのプログラムです．\n",
+    "\n",
+    "# 入力\n",
+    "\n",
+    "```python\n",
+    "file_path = '分析したいExcelファイル名.xlsx'\n",
+    "target_column = '分析したいカラム名'\n",
+    "```\n",
+    "\n",
+    "# 出力\n",
+    "\n",
+    "- 基本統計量\n",
+    "\n",
+    "```jsx\n",
+    "データ読み込み完了: （データ数）件\n",
+    "基本統計量:\n",
+    "count：データ数\n",
+    "mean：平均値\n",
+    "std：標準偏差\n",
+    "min：最小値\n",
+    "25%：第1四分位数\n",
+    "50%：中央値\n",
+    "75%：第3四分位数\n",
+    "max：最大値\n",
+    "```\n",
+    "\n",
+    "- 歪度\n",
+    "    - 歪度は，右裾が長いか左に偏った分布のときには正の値を，左裾が長いか右に偏った分布のときには負の値をとります．左右対称の分布の場合には0になります．\n",
+    "    \n",
+    "- 尖度\n",
+    "    - 正規分布より尖った分布のときには正の値を，正規分布より扁平な分布のときには負の値をとります．正規分布の場合には0になります．\n",
+    "    \n",
+    "- QQプロット\n",
+    "    - 2つの確率分布を比較するための図．\n",
+    "    - 2つの分布が類似している場合には，プロットが一直線に並びます．\n",
+    "\n",
+    "- ヒストグラム\n",
+    "    - データの分布を視覚的に確認するための図．\n",
+    "    - 平均値を中心に左右対称の山型の分布が見られると，正規分布．\n",
+    "    \n",
+    "- シャピロ・ウィルク検定\n",
+    "    - シャピロ・ウィルク検定は，データが正規分布しているかどうかを検定する手法です．検定の結果，p<0.05で有意となったときは「正規分布しない」と判断し，p≧0.05となったときは“正規分布していない，とはいえない（＝正規分布している）”とみなします．\n",
+    "    \n",
+    "- 欠損率\n",
+    "    - 欠損値とは，あるデータ内の変数において存在しない値を指します．\n",
+    "\n",
+    "- 外れ値の数\n",
+    "    - 得られた観測値の中で真の値の推定値からの残差が異常に大きい値"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +79,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = 'AdvanceData.xlsx'  # Excelファイル名\n",
-    "target_column = '記録数'         # 列名\n",
+    "file_path = 'AdvanceData.xlsx'\n",
+    "target_column = '記録数'\n",
     "\n",
     "df = pd.read_excel(file_path)\n",
     "\n",
@@ -37,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,13 +243,19 @@
     "    print()\n",
     "\n",
     "# 各列で実行\n",
+    "file_path = 'AdvanceData.xlsx'  # Excelファイル名\n",
+    "target_column = 'PERMA'         # 列名\n",
+    "\n",
+    "df = pd.read_excel(file_path)\n",
+    "\n",
+    "data = df[target_column].dropna()\n",
     "check_normality(data, f\"{target_column}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,38 +277,6 @@
     "# 各列の外れ値の合計数を表示\n",
     "outliers_count = outliers_mask.sum()\n",
     "print(outliers_count)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. 分布診断\n",
-    "skew_values = df[['UWES_ave', 'BAT_ave', 'PERMA']].skew()\n",
-    "print(\"Skew values:\\n\", skew_values)\n",
-    "\n",
-    "# 2. 非正規項目をWinsorize（scipy.stats を既に import 済みなので stats.mstats.winsorize を使用）\n",
-    "for col in skew_values[abs(skew_values) > 2].index:\n",
-    "    df[f'{col}_robust'] = stats.mstats.winsorize(df[col], limits=[0.05, 0.05])\n",
-    "\n",
-    "# 3. 相関行列（ピアソン）: 実在する列のみを選択\n",
-    "cols_for_corr = ['UWES_ave', 'BAT_ave', 'PERMA']\n",
-    "corr_matrix = df.filter(cols_for_corr).corr()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_non_normal = df[['UWES_ave', 'BAT_ave']] \n",
-    "spearman_corr = df_non_normal.corr(method='spearman')\n",
-    "print(\"Spearman:\\n\", spearman_corr)"
    ]
   }
  ],
